# bevyjam2

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: release.yaml
src/: ecs.rs  main.rs
src/ecs/: components.rs  systems.rs
src/ecs/components/: angular_velocity.rs  cell_base.rs  cell_structure.rs  consumable.rs  consumer.rs  cullable.rs  gravitational_pull.rs  menu_open.rs  position.rs  required_resources.rs  resource.rs  specialization.rs  title.rs  velocity.rs
src/ecs/systems/: camera.rs  cleanup.rs  consumption.rs  example.rs  logging.rs  menu_management.rs  movement.rs  renderer.rs  spawner.rs  specialization_transformer.rs  ui.rs
