[package]
name = "bevyjam2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
pre-commit = "0.5.2"
rand = "0.8.5"
uuid = "1.1.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Setup git hooks for precommit
[package.metadata.precommit]
check = "cargo check" # ensure package can compile
clippy = "cargo clippy" # run clippy linting
fmt = "cargo fmt --check" # check format
test = "cargo test" # ensure unit tests pass

# wgpu fix for flickering (temporary)
[patch.crates-io]
wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }